added more explanatory warnings to iPython notebook

--- a/examples/CameraUtilsExample.ipynb
+++ b/examples/CameraUtilsExample.ipynb
@@ -115,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Note:</b> This cell will raise an ```ErfaWarning```.  This is harmless.  We are asking ```astropy.Time``` to convert between UTC (universal coordinate time) and TAI (international atomic time) in the future (when LSST goes on-sky), which is technically impossible, given that one cannot predict when leap seconds will be added."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -260,6 +267,13 @@
     "\n",
     "cCoord = getCornerRaDec('R:3,4 S:0,1', camera, obs_metadata=obs)\n",
     "print('Corner (RA, Dec) pairs: ',cCoord)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Note:</b> Because of the rotation angle between the camera and the sky, the RA, Dec corner values will not be in any order relative to ```(min, max)```."
    ]
   },
   {
