--- a/examples/CameraUtilsExample.ipynb
+++ b/examples/CameraUtilsExample.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -37,18 +35,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from lsst.afw.cameraGeom import SCIENCE, WAVEFRONT, GUIDER, FOCUS\n",
+    "from lsst.afw.cameraGeom import DetectorType\n",
     "\n",
     "ccd_type_dict = {}\n",
-    "ccd_type_dict[SCIENCE] = 'science'\n",
-    "ccd_type_dict[WAVEFRONT] = 'wavefront'\n",
-    "ccd_type_dict[GUIDER] = 'guider'\n",
-    "ccd_type_dict[FOCUS] = 'focus'\n",
+    "ccd_type_dict[DetectorType.SCIENCE] = 'science'\n",
+    "ccd_type_dict[DetectorType.WAVEFRONT] = 'wavefront'\n",
+    "ccd_type_dict[DetectorType.GUIDER] = 'guider'\n",
+    "ccd_type_dict[DetectorType.FOCUS] = 'focus'\n",
     "\n",
     "for det in camera:\n",
     "    print('%s %s' % (det.getName(), ccd_type_dict[det.getType()]))"
@@ -64,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tt = camera['R:0,4 S:1,0'].getType()\n",
@@ -104,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from lsst.sims.utils import ObservationMetaData\n",
@@ -124,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -148,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chipNameList = chipNameFromRaDec(np.array([121.0, 121.7, 124.0]),\n",
@@ -169,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from lsst.sims.coordUtils import pixelCoordsFromRaDec\n",
@@ -190,9 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now let us specify a specific chip.  In this case,\n",
@@ -220,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "raList = np.array([121.0, 121.7, 124.0])\n",
@@ -255,9 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from lsst.sims.coordUtils import getCornerPixels, getCornerRaDec\n",
@@ -279,32 +259,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
